# tart

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup_ORIG.py
tart/: __init__.py  __main__.py  device.py  exceptions.py  log.py
tart/config/: config.py
tart/scripts/: itart.py
tart/utils/: dictionary_representor.py  func_utils.py
