[metadata]
name = tarte-tatin
version = 0.0.1
description = Python Library for IOS device controller
long_description = file: README.md
long_description_content_type = text/markdown
author = Ohad Shay
author_email = shai.ohad@gmail.com
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
tests_require = pytest

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    itart = tart.scripts:main
    tart = tart.cli_main:cli
